Fix up some colors for readability

--- a/theme/scss/_settings.scss
+++ b/theme/scss/_settings.scss
@@ -42,7 +42,7 @@
 
 // We use these to control various global styles
 $body-bg: #111;
-$body-font-color: #00C0C0;
+$body-font-color: #00DADA;
 $body-font-family: "Lato", sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -56,8 +56,8 @@ $body-font-family: "Lato", sans-serif;
 // $default-float: left;
 
 // We use these as default colors throughout
-$primary-color: #00C0C0;
-$secondary-color: #C000C0;
+$primary-color: $body-font-color;
+$secondary-color: #E000E0;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
@@ -123,7 +123,7 @@ $secondary-color: #C000C0;
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
-$header-font-color: #C000C0;
+$header-font-color: $secondary-color;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
@@ -169,6 +169,7 @@ $header-font-color: #C000C0;
 // $anchor-text-decoration-hover: none;
 // $anchor-font-color: $primary-color;
 // $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color-hover: scale-color($primary-color, $lightness: -24%);
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
@@ -512,7 +513,7 @@ $header-font-color: #C000C0;
 // $form-label-font-weight: $font-weight-normal;
 // $form-label-line-height: 1.5;
 // $form-label-font-color: scale-color(#000, $lightness: 30%);
-$form-label-font-color: #00FFFF;
+$form-label-font-color: scale-color($primary-color, $lightness: 40%);
 // $form-label-small-transform: capitalize;
 // $form-label-bottom-margin: 0;
 // $input-font-family: inherit;
